// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Outline 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <button
    className="sc-bdfBwQ sc-gsTCUz  BanWB"
  >
    Click
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Primary 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <button
    className="sc-bdfBwQ sc-gsTCUz  kqSVpZ"
  >
    Click
  </button>
</div>
`;

exports[`Storyshots Atoms/Layout Container 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm bFhuNW jeiKUw"
    height="100vh"
  >
    This is a responsive container
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout Grid 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <div
    className="sc-bdfBwQ sc-hKgILt bFhuNW cTA-dhf"
    height="100vh"
  >
    This is a responsive Grid
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/Heading Heading 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <h1
    className="sc-bdfBwQ sc-eCssSg sc-jSgupP  kVzVMq kXaXpn"
  >
    Mountain UI library
  </h1>
</div>
`;

exports[`Storyshots Atoms/Typography/Paragraph Paragraph 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <p
    className="sc-bdfBwQ sc-eCssSg sc-gKsewC sc-iBPRYJ  kVzVMq kQQGOS"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </p>
</div>
`;

exports[`Storyshots Atoms/Typography/Text Text 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm  jeiKUw"
>
  <span
    className="sc-bdfBwQ sc-eCssSg sc-gKsewC  kVzVMq kQQGOS"
  >
    Mountain UI library
  </span>
</div>
`;
